feat: add "/token/wallet/platform"
